[package]
name = "sifis-dht"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.6", features = ["ws"] }
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
env_logger = "0.9.0"
futures = "0.3.21"
libp2p = { version = "0.44.0", features = ["tcp-tokio", "mdns"] }
log = "0.4.17"
rusqlite = "0.27.0"
serde = "1.0.137"
serde_json = "1.0"
tokio = { version = "1.19.0", features = ["full"] }
reqwest = {version = "0.11.10", features = ["json"] }
tokio-tungstenite = "0.17.1"
futures-util = "0.3.21"
url = "2.2.2"
jsonpath_lib = "0.3.0"
openssl = { version = '0.10', features = ["vendored"] }
rsa = "0.6"
pem-rfc7468 = "0.3"
rand = "0.8"
libsqlite3-sys = { version = "*", features = ["bundled"] }
tower-http = { version = "0.3.0", features = ["cors"] }

[target.'cfg(unix)'.dependencies]
nix = "0.24.1"

[package.metadata.cargo-udeps.ignore]
normal = ["openssl"]
