[package]
name = "sifis-dht"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
vendored = ["openssl-sys/vendored", "libsqlite3-sys/bundled"]

[dependencies]
async-trait = "0.1.68"
futures = "0.3.21"
futures-util = "0.3.21"
jsonpath_lib = "0.3.0"
libp2p = { version = "0.51.2", features = ["tokio", "mdns", "gossipsub", "noise", "yamux", "pnet", "rsa", "tcp", "macros"] }
log = "0.4.17"
rand = "0.8"
sea-query = "0.28.3"
sea-query-binder = { version = "0.3.0", features = ["sqlx-any", "sqlx-postgres", "sqlx-sqlite"] }
serde = "1.0.137"
serde_json = "1.0"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls", "any", "postgres"] }
time = "0.3.17"
tokio = { version = "1.19.0", features = ["full"] }
url = "2.2.2"
rsa = "0.8"
pem-rfc7468 = { version = "0.7", features = ["alloc"] }
sifis-config = { path = "../dht-config" }
openssl-sys = "*"
libsqlite3-sys = "*"


[package.metadata.cargo-udeps.ignore]
normal = ["openssl-sys", "libsqlite3-sys", "libc"]
