[package]
name = "sifis-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive", "string"] }
figment = { version = "0.10.8", features = ["env", "toml"] }
serde = { version = "1.0.159", features = ["derive"] }
toml = "0.7.3"

